# django-template-monolith

./: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml  security-scan.yml
app/: main.py
app/config/: __init__.py  asgi.py  env.py  settings.py  urls.py  wsgi.py
app/modules/tasks/: apps.py  models.py  router.py  schemas.py  service.py
app/modules/tasks/management/commands/: seed.py
app/modules/tasks/migrations/: 0001_initial.py
app/shared/: ratelimit.py  telemetry.py
app/shared/exceptions/: handlers.py  schemas.py
app/shared/health/: views.py
app/shared/logging/: config.py
app/shared/metrics/: middleware.py  views.py
app/shared/middleware/: cors.py  logging_mw.py  request_id.py  security_headers.py
app/shared/redis/: client.py
docker/: Dockerfile  Dockerfile.dev  init-test-db.sql
docker/nginx/: nginx.conf
tests/: conftest.py  test_app.py  test_health.py  test_settings.py
tests/modules/tasks/: test_tasks.py
