[project]
name = "django-template-monolith"
version = "0.0.0"
description = "Django monolith template with Django Ninja, PostgreSQL, Redis, observability, and production-grade tooling"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "teo-garcia" }]
dependencies = [
    "django>=5.2,<6.0",
    "django-ninja>=1.4",
    "uvicorn[standard]>=0.34",
    "gunicorn>=23.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.7",
    "redis>=5.2",
    "django-redis>=5.4",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "django-ratelimit>=4.1",
    "httpx>=0.28",
    "uvicorn-worker>=0.3",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-instrumentation-django>=0.63b1",
    "opentelemetry-instrumentation-psycopg>=0.63b1",
    "opentelemetry-instrumentation-redis>=0.63b1",
    "opentelemetry-instrumentation-asgi>=0.63b1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "mypy>=1.14",
    "django-stubs>=5.1",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "teo-ruff-config-shared==0.1.0",
    "teo-mypy-config-shared==0.1.0",
    "teo-pytest-config-shared==0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# -- Ruff (lint + format) --

[tool.ruff]
extend = "ruff.extend.toml"

[tool.ruff.lint]
extend-select = ["DJ"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"app/modules/*/migrations/**" = ["UP", "I", "E501", "RUF012"]

# -- mypy --

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main", "pydantic.mypy"]
exclude = ["migrations/"]

[tool.django-stubs]
django_settings_module = "app.config.settings"

[[tool.mypy.overrides]]
module = ["django_ratelimit.*", "redis.*", "prometheus_client.*"]
ignore_missing_imports = true

# -- pytest --

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.config.settings"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
markers = ["e2e: end-to-end tests requiring database and redis"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
